# painfully-jupyter

./: .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
plugins/painfully-jupyter/.codex-plugin/: plugin.json
plugins/painfully-jupyter/skills/remote-notebook/: SKILL.md
src/painfully_jupyter/: __init__.py  app.py  config.py  errors.py  fake_broker.py  mcp_server.py  protocol.py  remote_helper.py  state.py  sync.py
tests/: test_config.py  test_integration.py  test_sync.py  test_token_session.py
